# StormworksCoopEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
graphics/: BodyRenderer.h  Mesh.h  Shader.h  SurfaceRenderer.h
graphics/shaders/: fragment.glsl  fragmentSurface.glsl  vertex.glsl  vertexSurface.glsl
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/cmake/glm/: glmConfig-version.cmake  glmConfig.cmake
lib/glm/doc/api/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_15.html  all_16.html  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  (+93 more)
logic/: Component.h  ComponentManager.h  Vehicle.h
mesh/: MeshDecoder.h
